# ESP32C6-Finance-Hub

./: .gitignore  CMakeLists.txt  partitions.csv
components/: CMakeLists.txt  lv_conf.h
include/: lv_conf.h
lib/lvgl/: CMakeLists.txt
lib/lvgl/env_support/cmake/: custom.cmake  esp.cmake  micropython.cmake  zephyr.cmake
lib/lvgl/src/: lv_conf_internal.h
main/: CMakeLists.txt  Red_Screen_Fetching.c  esp_http_client_handler.c  esp_http_client_handler.h  esp_wifi_connect.c  esp_wifi_connect.h  main.c  temp.c  working_tft.c
testing/: HelloWorld.c  gif.c  screen_solid_color.c  working_plaid.c
