# LVGL and TFT_eSPI Combined Component
file(GLOB_RECURSE LVGL_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/lvgl/*.c")
file(GLOB_RECURSE TFT_eSPI_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/TFT_eSPI/*.cpp")

set(COMBINED_SOURCES ${LVGL_SOURCES} ${TFT_eSPI_SOURCES})

idf_component_register(SRCS ${COMBINED_SOURCES}
        INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/lvgl" "${CMAKE_CURRENT_SOURCE_DIR}/TFT_eSPI")
